# rs-admin

./: .gitignore  Cargo.toml  README.md
.zed/: debug.json
exec-scripts/pyscripts/: test_py_script.py
exec-scripts/pyscripts/dangdangbook/: h5_spider.py  parse_h5_html.py
exec-scripts/pyscripts/encrypt/: aes_encrypt.py  aes_encrypt2.py
exec-scripts/pyscripts/exec_pyscript_utils/: utils.py
exec-scripts/pyscripts/file/: json_format.py  search_rename_file.py
src/: auth.rs  config.rs  error.rs  exec_script_engine.rs  lib.rs  list_params.rs  main.rs  maintenance.rs  operation_log.rs  router.rs  schema.rs  service.rs  tools_clear_delete.rs
src/crud/: code_template.rs  datasource.rs  dictionary.rs  exec_script.rs  mod.rs  operation_record.rs  querysql.rs  shellcode.rs  sys_dictionary_admin.rs  sys_users.rs
src/html2md/: convert.rs  download.rs  format_tpl.rs  mod.rs  out_text.rs  render.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: dictionary.ts  http.ts
web/src/components/: CodeMirrorPane.vue
web/src/layouts/: MainLayout.vue
web/src/router/: index.ts
web/src/sql-format/: FormatOptions.ts
web/src/utils/: dictLabel.ts  formatDate.ts  formatSql.ts
web/src/views/: ClearDeleteDataView.vue  CodeTemplateView.vue  CronToolView.vue  DatasourcesView.vue  DictionaryDetailView.vue  DictionaryManageView.vue  EncodeToolView.vue  ExecScriptView.vue  Html2mdView.vue  HttpToolView.vue  JsonToolView.vue  LoginView.vue  OperationHistoryView.vue  QueryPlatformView.vue  QuerySqlView.vue  SqlFormatView.vue  (+3 more)
(+5 files in other folders)
