[package]
name = "rs_admin"
version = "0.1.0"
edition = "2024"
default-run = "rs_admin"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
encoding_rs = "0.8"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.3", features = ["json"] }
regex = "1.12.3"
md5 = "0.8.0"
minijinja = "2"
scraper = "0.26"
tracing-appender = "0.2"
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Services",
  "Win32_System_Threading",
] }
